<resources>
    <string name="app_name">Mobi-Quiz</string>
    <string name="qNameTxtView">Quiz Name</string>
    <string name="qOptionTxtView">Choose a Quiz:</string>
    <string name="btnQFile1">Quiz One</string>
    <string name="currentQTxtView">Quiz Questions</string>
    <string name="progSeekBar">Questions Completed</string>
    <string name="deffTxtView">definition</string>
    <string name="btnCorrectTerm">term 1</string>
    <string name="btnWrongTerm1">term 2</string>
    <string name="btnWrongTerm2">term3</string>
    <string name="btnWrongTerm3">term 4</string>
    <string name="btnNext">Next</string>
</resources>